--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -66,6 +66,29 @@
     
 }
 
+@media screen and (max-width: 1380px) {
+   
+    .ff__header-content {
+        margin: 0 0 3rem;
+        
+    }
+
+    .ff__header-image img {
+        width: 90%;
+        height: 90%;
+        left: 694px;
+        border-radius: 79px;
+        padding-top: 5rem;
+        margin-right: 2rem;
+     }    
+
+    .ff__header-content h1 {
+        padding-top:5rem;
+    }
+  
+}
+
+
 
 @media screen and (max-width: 1050px) {
     .ff__header {
