--- a/src/components/footer/FooterStyle.css
+++ b/src/components/footer/FooterStyle.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    height: 25vh;
+    height: 100%;
     position: relative;
     background-color: white;
 }
@@ -63,13 +63,15 @@
     padding-top: 1rem;
     text-align:center;
     color: white;
+    background-color: #031B34;
+    width: 100%;
     letter-spacing: 2px;
     cursor: auto;
     font-family: 'Mulish', sans-serif;
 }
 
 .footer p {
-    margin: .5rem 0;
+  
     font-size: 1rem;
     font-family: 'Mulish', sans-serif;
     font-weight: 400;
